# https://pypi.org/project/setupcfg-generator/
[metadata]
name = django-traceback
version = 2019.4.13
url = https://github.com/andrewp-as-is/django-traceback.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = django traceback

[options]
install_requires = 
	Django>1.0
	setuptools
packages = 
	django_traceback
	django_traceback.migrations
